# pipelines_v3

./: .claudeignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_MONITORAMENTO_TEMPERATURA.txt  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  README.md  REFACTOR_RATIONALE.md  UPSTREAM_SYNC_NOTES.md  levantamento_modelos_riorotativo.md  modelo_relacional_riorotativo_miro.md  proposta_ci.md  pyproject.toml  teste.py  testes.py
.claude/: settings.json  settings.local.json  statusline.sh
.claude/agents/: migration-agent.md
.claude/commands/: dbt-check.md  deploy-info.md  lint.md  new-pipeline.md
.claude/hooks/: worktree-create.sh  worktree-remove.sh
.claude/skills/: smtr-github-daily-updates  smtr-github-subissues
.github/ISSUE_TEMPLATE/: cool-down.md  escopo.md  expedite.md  pitch.md
.github/scripts/: deploy_prefect_flows.py
.github/workflows/: build-and-push-root-image.yaml  build-and-push-runner.yaml  cd_automations.yaml  cd_blocks.yaml  cd_dbt_docs.yaml  dbt-checkpoints.yaml  dbt-checks.yaml  debug-gke-secret.yaml  deploy-prefect-flows-prod.yaml  deploy-prefect-flows-staging.yaml  doc-ci.yaml  doc-ci.yml  test-runner.yaml
automations/: automation.yaml  automations.yaml  crash_zombie_flows.yaml  deploy_automations.py
blocks/: blocks.yaml  deploy_blocks.py
openfisca_smtr/: .dockerignore  Dockerfile  Dockerfile-test  README.md  __init__.py  dataproc_container.md  entities.py  enums.py  pyproject.toml  requirements.txt  system.py  variables.py
openfisca_smtr/parameters/: ipa.yaml  prd.yaml
openfisca_smtr/parameters/impacto_tipo_viagem/completa/conforme/: percentual_atendimento.yaml  quilometragem_pagamento.yaml
openfisca_smtr/parameters/impacto_tipo_viagem/completa/invalida/: percentual_atendimento.yaml  quilometragem_pagamento.yaml
openfisca_smtr/parameters/impacto_tipo_viagem/completa/nao_conforme/: percentual_atendimento.yaml  quilometragem_pagamento.yaml
openfisca_smtr/parameters/impacto_tipo_viagem/incompleta/conforme/: percentual_atendimento.yaml  quilometragem_pagamento.yaml
openfisca_smtr/parameters/impacto_tipo_viagem/incompleta/invalida/: percentual_atendimento.yaml  quilometragem_pagamento.yaml
openfisca_smtr/parameters/impacto_tipo_viagem/incompleta/nao_conforme/: percentual_atendimento.yaml  quilometragem_pagamento.yaml
openfisca_smtr/parameters/impacto_tipo_viagem/nao_apurada/: percentual_atendimento.yaml  quilometragem_pagamento.yaml
openfisca_smtr/parameters/operacao_precaria/: desconto_grave.yaml  desconto_moderado.yaml  limite_grave.yaml  limite_moderado.yaml
openfisca_smtr/tests/: test_openfisca_variables.py
pipelines/automations/: automation.yaml
pipelines/capture__calendario_manual/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py  utils.py
pipelines/capture__cct_pagamento/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/capture__cittati_realocacao/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__cittati_registros/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__conecta_realocacao/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__conecta_registros/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__gtfs/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py  utils.py
pipelines/capture__inmet_temperatura/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/capture__jae_auxiliar/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml
pipelines/capture__jae_backup_billingpay/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py  utils.py
pipelines/capture__jae_estacionamento_veiculo/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_fiscalizacao_veiculo/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_gps_validador/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_integracao/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_lancamento/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_movimento_estacionamento_veiculo/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_ordem_pagamento/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/capture__jae_riorotativo_auxiliar/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_transacao/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  tasks.py
pipelines/capture__jae_transacao_erro/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_transacao_erro_historico/: CHANGELOG.md  Dockerfile  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/capture__jae_transacao_ordem/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_transacao_retificada/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__jae_transacao_riocard/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/capture__riorotativo_vagas/: CHANGELOG.md  Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/capture__riorotativo_vagas/contracts/: area_estacionamento.odcs.yaml  perfil_funcionamento.odcs.yaml
queries/: AGENTS.md  CHANGELOG.md  CLAUDE.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  selectors.yml  setup_dbt_profiles.sh  update_table_metadata.py
(+973 files in other folders)
