[project]
name = "pipelines_v3"
version = "0.1.0"
description = "Prefect pipelines for the Rio de Janeiro Department of Transportation."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aenum==3.1.16",
    "agate==1.9.1",
    "aiosqlite==0.21.0",
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "apprise==1.9.4",
    "asgi-lifespan==2.1.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "babel==2.17.0",
    "black==25.12.0",
    "boto3==1.40.72",
    "botocore==1.40.72",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "coolname==2.2.0",
    "croniter==6.0.0",
    "cryptography==46.0.1",
    "daff==1.4.2",
    "dateparser==1.2.2",
    "db-dtypes==1.4.3",
    "dbt-adapters==1.16.7",
    "dbt-bigquery==1.10.1",
    "dbt-common==1.31.0",
    "dbt-core==1.10.11",
    "dbt-extractor==0.6.0",
    "dbt-protos==1.0.375",
    "dbt-semantic-interfaces==0.9.0",
    "deepdiff==8.6.1",
    "dill==0.3.9",
    "distlib==0.4.0",
    "docker==7.1.0",
    "docstring-parser==0.17.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.2",
    "fastjsonschema==2.21.2",
    "filelock==3.20.0",
    "fsspec==2025.9.0",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.4",
    "google-cloud-aiplatform==1.114.0",
    "google-cloud-bigquery==3.29.0",
    "google-cloud-core==2.4.3",
    "google-cloud-dataproc==5.21.0",
    "google-cloud-resource-manager==1.14.2",
    "google-cloud-storage==2.10.0",
    "google-crc32c==1.7.1",
    "google-genai==1.38.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "graphql-core==3.2.7",
    "graphviz==0.21.0",
    "greenlet==3.2.4",
    "griffe==1.14.0",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.75.0",
    "grpcio-status==1.75.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.13.0",
    "hyperframe==6.1.0",
    "identify==2.6.15",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "infisicalsdk==1.0.12",
    "isodate==0.6.1",
    "jinja2==3.1.6",
    "jinja2-humanize-extension==0.4.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-core==5.8.1",
    "leather==0.4.0",
    "mako==1.3.10",
    "markdown==3.9.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mashumaro==3.14.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "msgpack==1.1.1",
    "mypy-extensions==1.1.0",
    "nbformat==5.10.4",
    "networkx==3.5.0",
    "nodeenv==1.9.1",
    "numpy==2.3.3",
    "oauthlib==3.3.1",
    "opentelemetry-api==1.37.0",
    "orderly-set==5.5.0",
    "orjson==3.11.3",
    "packaging==25.0.0",
    "pandas==2.3.2",
    "pandas-gbq==0.33.0",
    "parsedatetime==2.6.0",
    "pathspec==0.12.1",
    "pendulum==3.1.0",
    "pip==26.0.1",
    "platformdirs==4.4.0",
    "pre-commit==4.4.0",
    "prefect==3.4.9",
    "prefect-dbt==0.7.5",
    "prefect-docker==0.6.6",
    "prefect-shell==0.3.2",
    "prometheus-client==0.22.1",
    "proto-plus==1.26.1",
    "protobuf==6.32.1",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.11",
    "pyarrow==23.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
    "pydata-google-auth==1.9.1",
    "pygments==2.19.2",
    "pymysql==1.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "python-socks==2.7.2",
    "pytimeparse==1.1.8",
    "pytokens==0.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "readchar==4.2.1",
    "redis==4.6.0",
    "redis-pal==1.0.0",
    "referencing==0.36.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rich==14.1.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "ruamel-yaml==0.18.15",
    "ruamel-yaml-clib==0.2.12",
    "ruff==0.15.4",
    "s3transfer==0.14.0",
    "semver==3.0.4",
    "sentry-sdk==2.53.0",
    "setuptools==82.0.0",
    "sgqlc==18.0",
    "shandy-sqlfmt[jinjafmt]==0.29.0",
    "shapely==2.1.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowplow-tracker==1.1.0",
    "sqlalchemy==2.0.43",
    "sqlparse==0.5.3",
    "starlette==0.48.0",
    "tenacity==9.1.2",
    "text-unidecode==1.3",
    "toml==0.10.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "unidecode==1.3.8",
    "urllib3==2.5.0",
    "uv==0.8.17",
    "uvicorn==0.35.0",
    "virtualenv==20.35.4",
    "websockets==15.0.1",
    "whenever==0.8.8",
    "zipp==3.23.0",
]

[tool.uv.workspace]
members = ["pipelines/*"]
exclude = ["pipelines/__pycache__"]

[dependency-groups]
dev = [
    "prefect-docker==0.6.6",
    "ruff==0.15.4",
]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
exclude = ["templates"]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "W",
]

[tool.ruff.format]
quote-style = "double"
