[project]
name = "openfisca_smtr"
version = "0.1.0"
description = "Sistema OpenFisca da SMTR"
requires-python = ">=3.13,<3.14"
dependencies = [
    "openfisca-core>=43.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openfisca_smtr"]

[tool.setuptools.package-dir]
openfisca_smtr = "."

[tool.setuptools.package-data]
openfisca_smtr = ["parameters/**/*.yaml"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"variables.py" = ["ARG002", "N801", "N805", "PLR2004"]
"tests/*" = ["PLR2004"]
