[project]
name = "capture__riorotativo_vagas"
version = "0.1.0"
description = "Pipeline de captura de vagas do Rio Rotativo Digital"
dependencies = [
    "datacontract-cli[duckdb] @ https://files.pythonhosted.org/packages/9c/f6/5dc839b7a9565368525cfb192536289e7ba650bc3bd940aba390dda66ec0/datacontract_cli-1.0.13-py3-none-any.whl",
]
